# JouleQuestCardGame

./: .gitignore  Makefile  README.md  WASM_TRAINING_INTERFACE.md
.cursor/plans/: wasm_codegen_generators_a7399031.plan.md  wasm_ffi_training_bridge_21345f9c.plan.md
.cursor/rules/: joulequest-architectural-choices.mdc  joulequest-wasm-training.mdc  rl-agent-python.mdc
rl_agent/: .gitattributes  .gitignore  README.md  env_test.py  game_client.py  main.py  openapi_python_client_config.yaml  pyproject.toml  train.py
rl_agent/apiclient/: README.md  pyproject.toml
rl_agent/apiclient/joule_quest_api_client/: __init__.py
rl_agent/apiclient/joule_quest_api_client/api/default/: delete_g_game_id.py  get.py  get_g_game_id_log.py  post_g_game_id_action.py  post_new.py
rl_agent/apiclient/joule_quest_api_client/models/: __init__.py  asset_mix.py  error.py  game.py  game_id_list.py  game_last_round_snapshot.py  game_reason.py  game_status.py  game_update.py  player.py  player_action.py  player_action_asset_type.py  player_action_type.py  player_status.py
rl_agent/custom_environment/env/: joulequest_env.py
rl_agent/joulequest_env/: __init__.py  env_test.py
rl_agent/wasm_api_client/: __init__.py  __main__.py  _api_check.py  _client.py
src/: go.mod  go.sum
src/assets/: asset.go  asset_mix.go  asset_mix_test.go  battery_asset.go  fossil_asset.go  marketmode_string.go  operationmode_string.go  policy_string.go  renewable_asset.go  service_string.go  type_string.go
src/client/: client.go
src/compact/: TESTING_PLAN.md
src/core/: assettype_string.go  core.go  (+8 more)
(+74 files in other folders)
