[project]
name = "rl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs>=22.2.0",
    "h5py>=3.16.0",
    "httpx>=0.23.0,<0.29.0",
    "pettingzoo>=1.25.0",
    "python-dateutil==2.8.0",
    "tianshou>=0.5.1",
    "torch>=2.11.0",
    "wasmtime>=45.0.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "tensorboard>=2.20.0",
]
